✨feat: use safe digs and add Kafka connectivity helm test
Replace direct .Values lookups with dig calls and defaults for Temporal
settings to avoid missing-key template errors and provide sensible
defaults. Update environment and configmap templates to:
- use dig for taskQueue and clientName with defaults ("billing-task-queue",
  "flexprice-client")
- guard external.apiKey checks with dig to safely handle absent keys
- use dig to supply default retry and connection fields when values are
  not provided

Add a Helm test pod (test-kafka-connectivity.yaml) that verifies Kafka /
Redpanda broker reachability during chart testing. The test:
- runs a lightweight container that resolves brokers from external or
  operator settings
- attempts TCP connections with retries and fails the hook if brokers
  are unreachable

These changes improve chart robustness against missing values and add
automated connectivity validation for Kafka.

--- a/helm/flexprice/examples/values-external.yaml
+++ b/helm/flexprice/examples/values-external.yaml
@@ -82,7 +82,8 @@ postgres:
     existingSecret: "flexprice-postgres-credentials"
     passwordKey: "password"
   operator:
-    enabled: false
+    install: false  # Do not install operator as a dependency
+    enabled: false  # Do not deploy PostgreSQL using operator
   maxOpenConns: 25
   maxIdleConns: 10
   connMaxLifetimeMinutes: 30
@@ -99,7 +100,8 @@ clickhouse:
     existingSecret: "flexprice-clickhouse-credentials"
     passwordKey: "password"
   operator:
-    enabled: false
+    install: false  # Do not install operator as a dependency
+    enabled: false  # Do not deploy ClickHouse using operator
 
 # Use external Kafka
 kafka:
@@ -118,7 +120,8 @@ kafka:
       userKey: "username"
       passwordKey: "password"
   operator:
-    enabled: false
+    install: false  # Do not install operator as a dependency
+    enabled: false  # Do not deploy Kafka using operator
   consumerGroup: "flexprice-consumer-prod"
   clientId: "flexprice-client-prod"
 
@@ -133,7 +136,8 @@ temporal:
     existingSecret: "flexprice-temporal-credentials"
     apiKeySecretKey: "api-key"
   operator:
-    enabled: false
+    install: false  # Do not install Temporal as a dependency
+    enabled: false  # Do not deploy Temporal using chart
   taskQueue: "billing-task-queue"
   clientName: "flexprice-client-prod"
 
