--- a/helm/flexprice/templates/secret.yaml
+++ b/helm/flexprice/templates/secret.yaml
@@ -90,7 +90,7 @@ data:
 {{/*
 Temporal API key (only when external with API key)
 */}}
-{{- if and .Values.temporal.external.enabled .Values.temporal.external.apiKey (not .Values.temporal.external.existingSecret) }}
+{{- if and (dig "external" "enabled" false .Values.temporal) (dig "external" "apiKey" "" .Values.temporal) (not (dig "external" "existingSecret" "" .Values.temporal)) }}
 apiVersion: v1
 kind: Secret
 metadata:
