✨ feat: fix Typst image tag format in Dockerfile.local
Correct the FROM line to use the proper Typst image tag format
(ghcr.io/typst/typst:0.14.2) instead of the previous `v0.14.2`.
This ensures Docker can resolve and pull the intended image rather
than failing due to an unexpected tag prefix. The change keeps the
multi-stage build intact and avoids runtime issues when building the
local Docker image.

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -18,7 +18,7 @@ ENV CGO_ENABLED=0 \
 RUN go build -ldflags="-w -s" -o app cmd/server/main.go
 
 # Final stage
-FROM ghcr.io/typst/typst:v0.14.2 AS typst
+FROM ghcr.io/typst/typst:0.14.2 AS typst
 FROM alpine
 RUN apk --no-cache add ca-certificates tzdata
 
