✨ feat: unify container/runtime handling and cross-OS tasks
- Add OS detection and configure SLEEP, NULL_REDIRECT and SHELL_RUN for
  Windows (PowerShell) and Unix to make Makefile commands cross-platform.
- Auto-detect container runtime (docker or podman) and select the
  appropriate compose invocation (docker compose, docker-compose, or
  podman compose) so targets use a consistent $(COMPOSE) variable.
- Replace direct docker compose invocations with $(COMPOSE) across
  targets (up, down, migrate-postgres, migrate-clickhouse, seed-db,
  init-kafka) to support the detected runtime.
- Replace fixed sleep usage with $(SLEEP) to respect platform-specific
  waiting behavior.
- Implement Windows-specific command paths for ClickHouse migrations and
  Kafka initialization using PowerShell to stream SQL files and poll
  service readiness, while preserving POSIX shell loops for Unix.
- Improve error messages when neither docker nor podman is available or
  when docker compose tooling is missing.

These changes enable the Makefile to run reliably on both Windows and
Unix environments and with either Docker or Podman, improving developer
experience and CI portability.

--- a/helm/flexprice/values.yaml
+++ b/helm/flexprice/values.yaml
@@ -19,7 +19,7 @@ global:
 # -----------------------------------------------------------------------------
 flexprice:
   image:
-    repository: flexprice/flexprice
+    repository: ghcr.io/alfkonee/flexprice
     tag: "latest"
     pullPolicy: IfNotPresent
 
